prevent text overflow in columns and tickets

--- a/app/assets/stylesheets/boardColumns.css
+++ b/app/assets/stylesheets/boardColumns.css
@@ -52,8 +52,10 @@
   cursor: pointer;
 }
 
-.handle:hover .column-destroy {
+.handle:hover .column-destroy,
+.ticket:hover .ticket-destroy {
   display: block;
+  margin-left: 10px;
 }
 
 .column-tickets {
@@ -65,6 +67,9 @@
 
 .column-item {
   width: 100%;
+  max-height: 200px;
+  word-break: break-word;
+  overflow-y: auto;
   padding: 1rem;
   box-sizing: border-box;
 }
@@ -89,10 +94,6 @@
 .ticket-destroy {
   display: none;
   width: min-content;
-}
-
-.ticket:hover .ticket-destroy {
-  display: block;
 }
 
 .ticket-destroy:hover {
